NewFlameHM/force-app/main/default/objects/Menu_Item__c/Menu_Item__c.object-meta.xml
<CustomObject>
    <label>Food Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>