NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Calories_kcal__c.field-meta.xml
<CustomField>
    <fullName>Calories_kcal__c</fullName>
    <label>Calories (kcal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>