NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Carbs__c.field-meta.xml
<CustomField>
    <fullName>Carbs__c</fullName>
    <label>Carbs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>