NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accompaniment</fullName>
            </value>
            <value>
                <fullName>Beverage</fullName>
            </value>
            <value>
                <fullName>Bread</fullName>
            </value>
            <value>
                <fullName>Cereal</fullName>
            </value>
            <value>
                <fullName>Chutney</fullName>
            </value>
            <value>
                <fullName>Cold Beverage</fullName>
            </value>
            <value>
                <fullName>Curd</fullName>
            </value>
            <value>
                <fullName>Dal</fullName>
            </value>
            <value>
                <fullName>Dessert</fullName>
            </value>
            <value>
                <fullName>Dry Veg</fullName>
            </value>
            <value>
                <fullName>Fruits/Juice</fullName>
            </value>
            <value>
                <fullName>Gravy Veg</fullName>
            </value>
            <value>
                <fullName>Hot Beverage</fullName>
            </value>
            <value>
                <fullName>Indian Breakfast</fullName>
            </value>
            <value>
                <fullName>Jain Dry</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Milk</fullName>
            </value>
            <value>
                <fullName>Papad/Fryums</fullName>
            </value>
            <value>
                <fullName>Papad / Fryums</fullName>
            </value>
            <value>
                <fullName>Pickle</fullName>
            </value>
            <value>
                <fullName>Preserves</fullName>
            </value>
            <value>
                <fullName>Rice</fullName>
            </value>
            <value>
                <fullName>Roti</fullName>
            </value>
            <value>
                <fullName>Salad</fullName>
            </value>
            <value>
                <fullName>Side Dish</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
            <value>
                <fullName>Soup</fullName>
            </value>
            <value>
                <fullName>Spread</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>