NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Cholesterol__c.field-meta.xml
<CustomField>
    <fullName>Cholesterol__c</fullName>
    <label>Cholesterol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>