NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Cuisine__c.field-meta.xml
<CustomField>
    <fullName>Cuisine__c</fullName>
    <label>Cuisine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Maharashtrian</fullName>
            </value>
            <value>
                <fullName>North Indian</fullName>
            </value>
            <value>
                <fullName>Punjabi</fullName>
            </value>
            <value>
                <fullName>South Indian</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>