NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Fat__c.field-meta.xml
<CustomField>
    <fullName>Fat__c</fullName>
    <label>Fat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>