NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Fibre__c.field-meta.xml
<CustomField>
    <fullName>Fibre__c</fullName>
    <label>Fibre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>