NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Ideal_Serving_Size__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Serving_Size__c</fullName>
    <label>Ideal Serving Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>