NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Ideal_Serving_Type__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Serving_Type__c</fullName>
    <label>Ideal Serving Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pieces</fullName>
            </value>
            <value>
                <fullName>Grams</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>