NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Is_Jain__c.field-meta.xml
<CustomField>
    <fullName>Is_Jain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Jain?</label>
    <type>Checkbox</type>
</CustomField>