NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Sodium__c.field-meta.xml
<CustomField>
    <fullName>Sodium__c</fullName>
    <label>Sodium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>