NewFlameHM/force-app/main/default/objects/Menu_Item__c/fields/Sugar__c.field-meta.xml
<CustomField>
    <fullName>Sugar__c</fullName>
    <label>Sugar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>